--- a/preliminary_results/NaiveBayes.ipynb
+++ b/preliminary_results/NaiveBayes.ipynb
@@ -63,7 +63,7 @@
     "                )\n",
     "            ).get( 'AB' )\n",
     "        )\n",
-    "    time.sleep( 1 ) # avoid PubMed ban\n",
+    "    time.sleep( 1/3 ) # avoid PubMed ban\n",
     "for pmid in negids :\n",
     "    data[ 'negative' ].add(\n",
     "        Medline.read(\n",
@@ -76,12 +76,12 @@
     "                )\n",
     "            ).get( 'AB' )\n",
     "        )\n",
-    "    time.sleep( 1 ) # avoid PubMed ban"
+    "    time.sleep( 1/3 ) # avoid PubMed ban"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -90,20 +90,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Examples Trained: 50340\n",
-      "Examples Tested : 49660\n",
-      "Total Examples  : 100000\n"
+      "Examples Trained: 503715\n",
+      "Examples Tested : 496285\n",
+      "Total Examples  : 1000000\n"
      ]
     }
    ],
    "source": [
     "model = NaiveBayes()\n",
-    "model.trainAndTest( data, iters = 1000 )"
+    "model.trainAndTest( data, iters = 10000 ) # Monte Carlo cross-validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -135,39 +135,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>14029</td>\n",
-       "      <td>2488</td>\n",
+       "      <td>139485</td>\n",
+       "      <td>25997</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
-       "      <td>1074</td>\n",
-       "      <td>32069</td>\n",
+       "      <td>11390</td>\n",
+       "      <td>319413</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>precision</th>\n",
-       "      <td>0.849367</td>\n",
-       "      <td>0.967595</td>\n",
+       "      <td>0.842901</td>\n",
+       "      <td>0.965569</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>truth rate</th>\n",
-       "      <td>0.928888</td>\n",
-       "      <td>0.928003</td>\n",
+       "      <td>0.924507</td>\n",
+       "      <td>0.924736</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>false rate</th>\n",
-       "      <td>0.164735</td>\n",
-       "      <td>0.0310791</td>\n",
+       "      <td>0.172308</td>\n",
+       "      <td>0.0329753</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>accuracy</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>0.95(0.05)</td>\n",
+       "      <td>0.94(0.06)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -175,15 +175,15 @@
       ],
       "text/plain": [
        "            positive   negative       model\n",
-       "positive       14029       2488            \n",
-       "negative        1074      32069            \n",
-       "precision   0.849367   0.967595            \n",
-       "truth rate  0.928888   0.928003            \n",
-       "false rate  0.164735  0.0310791            \n",
-       "accuracy                         0.95(0.05)"
+       "positive      139485      25997            \n",
+       "negative       11390     319413            \n",
+       "precision   0.842901   0.965569            \n",
+       "truth rate  0.924507   0.924736            \n",
+       "false rate  0.172308  0.0329753            \n",
+       "accuracy                         0.94(0.06)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
