--- a/preliminary_results/NaiveBayes.ipynb
+++ b/preliminary_results/NaiveBayes.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define data structure\n",
     "Class, Document = str, str\n",
     "data : Dict[ Class, Set[ Document ] ] = { 'positive' : set(), 'negative' : set() }"
    ]
@@ -50,60 +51,182 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_abstract( pmid : Set[ str ] ) -> Dict[ Class, Set[ Document ] ] :\n",
+    "    '''\n",
+    "    Get Abstract from PubMed\n",
+    "    '''\n",
+    "    return Medline.read(\n",
+    "        Entrez.efetch(\n",
+    "            db = 'pubmed',\n",
+    "            id = pmid,\n",
+    "            email = 'chiodini.zachary@epa.gov',\n",
+    "            retmode = 'text',\n",
+    "            rettype = 'medline'\n",
+    "            )\n",
+    "        ).get( 'AB' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# getting data\n",
     "for pmid in posids :\n",
-    "    data[ 'positive' ].add(\n",
-    "        Medline.read(\n",
-    "            Entrez.efetch(\n",
-    "                db = 'pubmed',\n",
-    "                id = pmid,\n",
-    "                email = 'chiodini.zachary@epa.gov',\n",
-    "                retmode = 'text',\n",
-    "                rettype = 'medline'\n",
-    "                )\n",
-    "            ).get( 'AB' )\n",
-    "        )\n",
+    "    data[ 'positive' ].add( get_abstract( pmid ) )\n",
     "    time.sleep( 1/3 ) # avoid PubMed ban\n",
     "for pmid in negids :\n",
-    "    data[ 'negative' ].add(\n",
-    "        Medline.read(\n",
-    "            Entrez.efetch(\n",
-    "                db = 'pubmed',\n",
-    "                id = pmid,\n",
-    "                email = 'chiodini.zachary@epa.gov',\n",
-    "                retmode = 'text',\n",
-    "                rettype = 'medline'\n",
-    "                )\n",
-    "            ).get( 'AB' )\n",
-    "        )\n",
+    "    data[ 'negative' ].add( get_abstract( pmid ) )\n",
     "    time.sleep( 1/3 ) # avoid PubMed ban"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "model = NaiveBayes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Examples Trained: 503715\n",
-      "Examples Tested : 496285\n",
-      "Total Examples  : 1000000\n"
+      "Examples Trained: 900\n",
+      "Examples Tested : 100\n",
+      "Total Examples  : 1000\n"
      ]
     }
    ],
    "source": [
-    "model = NaiveBayes()\n",
-    "model.trainAndTest( data, iters = 10000 ) # Monte Carlo cross-validation"
+    "model.kFoldValidate( data, k = 10 ) # 10-fold cross-validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>positive</th>\n",
+       "      <th>negative</th>\n",
+       "      <th>model</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>positive</th>\n",
+       "      <td>270</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>negative</th>\n",
+       "      <td>0</td>\n",
+       "      <td>630</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>truth rate</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>false rate</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1.0(0.0)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           positive negative     model\n",
+       "positive        270        0          \n",
+       "negative          0      630          \n",
+       "truth rate        1        1          \n",
+       "false rate        0        0          \n",
+       "precision         1        1          \n",
+       "accuracy                      1.0(0.0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.DataFrame( model.predictions ).fillna( '' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Examples Trained: 50706\n",
+      "Examples Tested : 49294\n",
+      "Total Examples  : 100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.trainAndTest( data, iters = 1000 ) # Monte-Carlo cross-validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -135,61 +258,60 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>139485</td>\n",
-       "      <td>25997</td>\n",
+       "      <td>13949</td>\n",
+       "      <td>2402</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
-       "      <td>11390</td>\n",
-       "      <td>319413</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>precision</th>\n",
-       "      <td>0.842901</td>\n",
-       "      <td>0.965569</td>\n",
+       "      <td>1052</td>\n",
+       "      <td>31891</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>truth rate</th>\n",
-       "      <td>0.924507</td>\n",
-       "      <td>0.924736</td>\n",
+       "      <td>0.929871</td>\n",
+       "      <td>0.929957</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>false rate</th>\n",
-       "      <td>0.172308</td>\n",
-       "      <td>0.0329753</td>\n",
+       "      <td>0.0700434</td>\n",
+       "      <td>0.0701287</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.853098</td>\n",
+       "      <td>0.968066</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>accuracy</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>0.94(0.06)</td>\n",
+       "      <td>0.95(0.05)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            positive   negative       model\n",
-       "positive      139485      25997            \n",
-       "negative       11390     319413            \n",
-       "precision   0.842901   0.965569            \n",
-       "truth rate  0.924507   0.924736            \n",
-       "false rate  0.172308  0.0329753            \n",
-       "accuracy                         0.94(0.06)"
+       "             positive   negative       model\n",
+       "positive        13949       2402            \n",
+       "negative         1052      31891            \n",
+       "truth rate   0.929871   0.929957            \n",
+       "false rate  0.0700434  0.0701287            \n",
+       "precision    0.853098   0.968066            \n",
+       "accuracy                          0.95(0.05)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "pd.DataFrame( model.predictions ).fillna( '' )"
    ]
   }
