--- a/preliminary_results/LogisticRegression.ipynb
+++ b/preliminary_results/LogisticRegression.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,26 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Examples Trained: 900\n",
+      "Examples Trained: 100\n",
       "Examples Tested : 100\n",
-      "Total Examples  : 1000\n"
+      "Total Examples  : 200\n"
      ]
     }
    ],
    "source": [
-    "model.kFoldValidate( data, rate = 1, convergence = 0.01, target = 'positive', k = 10 ) # 10-fold cross-validation"
+    "model.kFoldValidate( data, rate = 1, convergence = 0.00001, target = 'positive', k = 2 ) # 2-fold cross-validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -141,14 +143,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>270</td>\n",
+       "      <td>30</td>\n",
        "      <td>0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
        "      <td>0</td>\n",
-       "      <td>630</td>\n",
+       "      <td>70</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -181,15 +183,15 @@
       ],
       "text/plain": [
        "           positive negative     model\n",
-       "positive        270        0          \n",
-       "negative          0      630          \n",
+       "positive         30        0          \n",
+       "negative          0       70          \n",
        "truth rate        1        1          \n",
        "false rate        0        0          \n",
        "precision         1        1          \n",
        "accuracy                      1.0(0.0)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,15 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Examples Trained: 49691\n",
-      "Examples Tested : 50309\n",
+      "Examples Trained: 48709\n",
+      "Examples Tested : 51291\n",
       "Total Examples  : 100000\n"
      ]
     }
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -255,39 +257,39 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>positive</th>\n",
-       "      <td>12165</td>\n",
-       "      <td>846</td>\n",
+       "      <td>12375</td>\n",
+       "      <td>981</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>negative</th>\n",
-       "      <td>3133</td>\n",
-       "      <td>34165</td>\n",
+       "      <td>3207</td>\n",
+       "      <td>34728</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>truth rate</th>\n",
-       "      <td>0.795202</td>\n",
-       "      <td>0.975836</td>\n",
+       "      <td>0.794186</td>\n",
+       "      <td>0.972528</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>false rate</th>\n",
-       "      <td>0.0241638</td>\n",
-       "      <td>0.204798</td>\n",
+       "      <td>0.0274721</td>\n",
+       "      <td>0.205814</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>precision</th>\n",
-       "      <td>0.934978</td>\n",
-       "      <td>0.916001</td>\n",
+       "      <td>0.92655</td>\n",
+       "      <td>0.915461</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>accuracy</th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>0.94(0.06)</td>\n",
+       "      <td>0.93(0.07)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -295,15 +297,15 @@
       ],
       "text/plain": [
        "             positive  negative       model\n",
-       "positive        12165       846            \n",
-       "negative         3133     34165            \n",
-       "truth rate   0.795202  0.975836            \n",
-       "false rate  0.0241638  0.204798            \n",
-       "precision    0.934978  0.916001            \n",
-       "accuracy                         0.94(0.06)"
+       "positive        12375       981            \n",
+       "negative         3207     34728            \n",
+       "truth rate   0.794186  0.972528            \n",
+       "false rate  0.0274721  0.205814            \n",
+       "precision     0.92655  0.915461            \n",
+       "accuracy                         0.93(0.07)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
